# Spot

./: Cargo.toml  README.md  insert_spotify.py
src/: lib.rs  main.rs  settings.rs  theme.rs
src/api/: callback_server.rs  mod.rs  spotify.rs
src/gui/: app.rs  mod.rs  playback_bar.rs  sidebar.rs
src/gui/screens/: library.rs  made_for_you.rs  mod.rs  queue.rs  search.rs
