[package]
name = "spotix-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["winit"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
oauth2 = { version = "8.2", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
rodio = "0.19"
cpal = "0.16"
symphonia = { version = "0.6", default-features = false, features = ["vorbis", "mp3", "aac", "flac"] }
dotenvy = "0.15"